[package]
name = "fitm"
version = "0.1.0"
authors = ["Julian <jb@futureplay.de>", "Otto Bittner <cobittner@posteo.net"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
rand = "0.7"