[package]
name = "fitm"
version = "0.1.0"
authors = ["Julian <jb@futureplay.de>", "Otto Bittner <cobittner@posteo.net"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.1.0"
regex = "1.3.9"
rand = "0.7.3"
libc = "0.2.82"
json = "0.12.4"
strsim = "0.10.0"